# War-Is-Choice

./: README.md  pyproject.toml
src/war_is_choice/: __init__.py  example.py  models.py  serialization.py  simulation.py
