[project]
name = "war-is-choice"
version = "0.1.0"
description = "Global-scale strategy simulation scaffold"
requires-python = ">=3.10"

[project.optional-dependencies]
 dev = ["pytest"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
